--- a/serv-1/application/templates/index.html
+++ b/serv-1/application/templates/index.html
@@ -4,4 +4,8 @@
 
 <p>
     random number {{ qran }} advises {{ meal }}!
+    <br>
+    Eating the advised meal have the following consequences:
+    <br>
+    {{ whatudone }}
 </p>
